Updated details in contact

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <img src="/img/me.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h3>UI/UX &amp; Graphic Designer</h3>
+                    <h3>Full-Stack .NET Software Developer</h3>
                     <p class="fst-italic">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore
@@ -99,8 +99,7 @@
 
                                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
                                     <span>www.example.com</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York,
-                                        USA</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Winston-Salem, NC</span></li>
                             </ul>
                         </div>
                         <div class="col-lg-6">
@@ -108,7 +107,7 @@
 
 
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                                    <span>email@example.com</span></li>
+                                    <span>Tyler_taylor05@hotmail.com</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
                                     <span>Available</span></li>
                             </ul>
