--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1><a href="index.html">Tyler Taylor</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="mr-auto"><img src="/img/logo.png" alt="" class="img-fluid"></a> -->
-            <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+            <h2>I'm a passionate <span>Full Stack .NET Developer</span></h2>
 
             <nav id="navbar" class="navbar">
                 <ul>
@@ -84,7 +84,7 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-                    <img src="/img/me.jpg" class="img-fluid" alt="">
+                    <img src="/img/Profilepic.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Full-Stack .NET Software Developer</h3>
