--- a/index.html
+++ b/index.html
@@ -187,21 +187,21 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 gy-4">
                     <img src="/img/Xamarin.png" class="" alt="...">
-                    <h3>Mobile Developmet</h3>
+                    <h3>Mobile Development</h3>
                     <p class="card-text">Xamarin is a cross platform native mobile development
                         platform. This allows me to create mobile applicaitons the
                         run on IOS and Andriod.
                     </p>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 gy-4">
                     <img src="/img/SQL.png" class="" alt="...">
                     <h3>Database Development</h3>
                     <p class="card-text">Database Development is critical to most projects. I am well
                         veresed in SQL Development from queries to design.</p>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 gy-4">
                     <img src="/img//Bootstrap.png" class="" alt="...">
                     <h3>Front End Design</h3>
                     <p class="card-text">The look and feel are very important elements to any
