--- a/index.html
+++ b/index.html
@@ -189,11 +189,10 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-4 gy-4">
-                    <img src="/img/Xamarin.png" class="" alt="...">
+                    <img src="/img/github.png" class="" alt="...">
                     <h3>Mobile Development</h3>
-                    <p class="card-text">Xamarin is a cross platform native mobile development
-                        platform. This allows me to create mobile applicaitons the
-                        run on IOS and Andriod.
+                    <p class="card-text">I use GitHub for all of the essentials like creating and managing repositories,
+                        branches, commits, and pull requests.
                     </p>
                 </div>
                 <div class="col-12 col-md-4 gy-4">
@@ -240,12 +239,12 @@
             </div>
 
             <div class="row row-cols-1 row-cols-md-3 gy-5 pt-5">
-                <!--Bug Trakcer Card-->
+                <!--Bug Tracker Card-->
                 <div class="col d-flex justify-content-center justify-content-md-start">
                     <div class="card projectCard">
-                        <img src="/img/BugTracker2.jpg" class="card-img-top img-fluid" alt="Bug Tracker">
+                        <img src="/img/BugBoss (1).png" class="card-img-top img-fluid" alt="Bug Tracker">
                         <div class="card-body">
-                            <h5 class="card-title" Insecticide></h5>
+                            <h5 class="card-title" BugOut></h5>
                             <p class="card-text">
                                 A Full Stack feature rich bug tracker built with asp.net MVC, C#
                                 and SQL.</p>
@@ -256,12 +255,27 @@
                         </div>
                     </div>
                 </div>
-
+                 <!--Blog Card-->
+                 <div class="col d-flex justify-content-center">
+                     <div class="card projectCard">
+                         <img src="img/VentureDatabase.png" class="card-img-top img-fluid" alt="Code Talk">
+                         <div class="card-body">
+                             <h5 class="card-title" Code Talk></h5>
+                             <p class="card-text">
+                                 A Full Stack complete Blogging platform built with asp.net MVC, C#
+                                 and SQL.</p>
+                         </div>
+                         <div class="card-footer text-center">
+                             <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
+                                 data-bs-target="#CodeTalkModal">Learn More</button>
+                         </div>
+                     </div>
+                 </div>
 
                 <!--Expense Tracker Card-->
-                <div class="col d-flex justify-content-center">
+                <div class="col d-flex justify-content-center justify-content-md-end">
                     <div class="card projectCard">
-                        <img src="/img/ExpenseTracker2.jpg" class="card-img-top img-fluid" alt="Expense Tracker">
+                        <img src="/img/Rolodex (1).png" class="card-img-top img-fluid" alt="Expense Tracker">
                         <div class="card-body">
                             <h5 class="card-title" Money Grow></h5>
                             <p class="card-text">
@@ -275,22 +289,7 @@
                     </div>
 
                 </div>
-                <!--Blog Card-->
-                <div class="col d-flex justify-content-center justify-content-md-end">
-                    <div class="card projectCard">
-                        <img src="img/Blog2.jpg" class="card-img-top img-fluid" alt="Code Talk">
-                        <div class="card-body">
-                            <h5 class="card-title" Code Talk></h5>
-                            <p class="card-text">
-                                A Full Stack complete Blogging platform built with asp.net MVC, C#
-                                and SQL.</p>
-                        </div>
-                        <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-dark" data-bs-toggle="modal"
-                                data-bs-target="#CodeTalkModal">Learn More</button>
-                        </div>
-                    </div>
-                </div>
+               
             </div>
         </div>
     </section><!-- End Services Section -->
@@ -410,7 +409,7 @@
                   <!--Super Dog Events Coding Challenge-->
                   <div class="col d-flex justify-content-center justify-content-md-end">
                       <div class="card projectCard">
-                          <img src="img/codingchallenge_Superdog.jpg" class="card-img-top img-fluid"
+                          <img src="img/SuperDog.png" class="card-img-top img-fluid"
                               alt="SuperDog Events">
                           <div class="card-body">
                               <h5 class="card-title" SuperDogEvents></h5>
@@ -589,7 +588,7 @@
         <div class="modal-dialog modal-dialog-centered modal-xl modal-fullscreen-md-down">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="BugTrackerModalLabel">Reverse In A Flash</h5>
+                    <h5 class="modal-title" id="BugTrackerModalLabel">BugOut</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -645,7 +644,7 @@
                                 </div>
                                 <div class="col-12 col-md-7 text-white">
                                     <div>
-                                        <h3>Insecticide</h3>
+                                        <h3>BugOut</h3>
                                         <div>
                                             <p>
                                                 Insecticide is a software defect tracking system.
